frontend/styles.scss
@import 'variables';

// html,
// body,
// awrss-root,
// mat-sidenav-container {
//   height: 100%;
//   background-color: mat-color($primary);
// }

[mat-button] {
  text-transform: uppercase;
}

[matTooltip] {
  touch-action: auto !important;
}

// These must be globall scoped
// https://github.com/angular/material2/issues/13983
mat-sidenav>.mat-drawer-inner-container {
  // Firefox
  scrollbar-width: none;

  // Chrome
  &::-webkit-scrollbar {
    width: 0;
  }
}

.cdk-drag-placeholder {
  display: none !important;
}

awrss-nav {
  .mat-expansion-panel-body {
    padding: 0 0 0 8px;
  }

  .active .mat-expansion-indicator::after {
    color: black;
  }

  .mat-expansion-indicator {
    margin-left: 16px;
  }
}

